--- a/style.css
+++ b/style.css
@@ -32,19 +32,21 @@ header {
     left: 0;
     z-index: 99999;
 }
-header div {
+/*header div {
     background-color: #002369;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
-}
+}*/
 nav {
-    width: 80%;
+    width: 100%;
     margin: 0;
     position: fixed;
     top: 0;
-    left: 10vw;
+    left: 0;
+    padding: 0 10vw;
+    background-color: #002369;
 }
 .logo {
     width: auto;
@@ -71,21 +73,21 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: absolute;
-    top: 65px;
-    background-color: #f9f9f9;
+    top: 63px;
+    background-color: #002369;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 .dropdown-content a {
-    color: black;
+    color: #000;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
 }
 .dropdown-content a:hover {
-    background-color: #f1f1f1
+    background-color: #2179FF;
 }
 .dropdown:hover .dropdown-content {
     display: block;
